Rework of TaxId